WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288681
[IFC] Do not try to invalidate inline layout when never-laid-out renderer is removed
https://bugs.webkit.org/show_bug.cgi?id=288681
Summary
[IFC] Do not try to invalidate inline layout when never-laid-out renderer is ...
alan
Reported
2025-02-26 20:24:44 PST
ssia
Attachments
[fast-cq]Patch
(2.82 KB, patch)
2025-02-26 20:29 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-02-26 20:29:30 PST
Created
attachment 474366
[details]
[fast-cq]Patch
EWS
Comment 2
2025-02-27 13:03:09 PST
Committed
291248@main
(8a9b0a7cd46e): <
https://commits.webkit.org/291248@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 474366
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-02-27 13:04:23 PST
<
rdar://problem/145780395
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug