[IFC] Do not try to invalidate inline layout when never-laid-out renderer is removed https://bugs.webkit.org/show_bug.cgi?id=288681

Reviewed by Antti Koivisto.

A renderer may change its containing block position (through JS) even before running
layout on it. Such insertion position changes should not trigger inline layout invalidation.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::removedFromTree):
* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::invalidateLineLayout):

Canonical link: https://commits.webkit.org/291248@main